src/app/shared/shared-video-assess-view/shared-video-assess-view.component.scss
/* ... */
.form-error {
  color: $primary-red;
  font-size: 12px;
}

.loading-button {
  cursor: auto !important;
  .load-icon {
    margin-right: 4px;
    animation: button-loading-spinner 1s ease infinite;
  }
}
@keyframes button-loading-spinner {
  from {
    transform: rotate(0turn);
  }

  to {
    transform: rotate(1turn);
  }
}
.header-wrapper {
background: #F8FBFD 0% 0% no-repeat padding-box;
border: 0.5px solid rgb(112, 112, 112, 0.35);
padding: 4px 4px;
min-height: 120px;
display: flex;
align-items: center;
.profileinfo {
  display: flex;
  flex-direction: row;
  align-items: center;
  .img {
    width: 100px;
    height: 100px;
    border: 1px solid #d0d0d0;
    border-radius: 50px;
    overflow: hidden;
    margin-right: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    img {
      width: 100%;
    }
  }
  div:nth-child(2) {
    font-size: 24px;
    line-height: 1.1;
    margin-right: 50px;
    white-space: nowrap;
    span {
      font-size: 13px;
      color: #808080;
      display: block;
    }
  }
}
.summary-wrapper {
  display: flex;
  height: 100%;
  flex-wrap: wrap;
  .group {
    min-width: 280px;
    max-width: 280px;
    margin: 4px 4px 4px 16px;
    display: flex;
    height: 100%;
    .label-group {
      display: flex;
      width: 150px;
      max-width: 150px;
      line-break: anywhere;
      justify-content: space-between;
      // white-space: nowrap;
      .label {
        color: #666666;
      }
      .colon {
        padding-right: 6px;
      }
    }
    .value {
      max-width: 130px;
      line-break: anywhere;
      color: #232323;
    }
  }
  .group-assess {
    max-width: 580px !important;
    min-width: 580px !important;
  }
}

}
  // display: flex;
  // padding: 16px 0px 16px 0px;
  // min-height: calc(100vh - 300px);
  // width: 100%;
  .leftHalf {
    min-width: 400px;
    max-width: 400px;
    background-color: #F2F2F2;
    padding: 10px 20px;
    overflow: auto;
    height: 100%;
      @media only screen and (min-width: 1540px) {
          min-width: 500px;
          max-width: 500px;
      }
      h5 {
          color: #999999;
          font-size: 12px;
          font-weight: 400;
          line-height: normal;
      }
      .qusCard {
          width: 100%;
          .qusAlign {
              background-color: #FFFFFF;
              border-radius: 5px;
              overflow: hidden;
              position: relative;
              padding: 15px;
              margin-bottom: 15px;
              display: flex;
              cursor: pointer;
              box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
              // &::before {
              //     content: '';
              //     position: absolute;
              //     background-color: #27BBEE;
              //     width: 5px;
              //     height: 100%;
              //     left: 0;
              //     top: 0;
              // }
              span {
                  font-size: 14px;
                  font-weight: 500;
                  line-height: normal;
                  &:first-child {
                      color: #999999;
                  }
                  &:last-child {
                      // color: #333333;
                      margin-left: 5px;
                  }
              }
          }
      }
  }
  .rightHalf {
      background-color: #fff;
      width: calc(100% - 400px);
      padding: 0 20px;
      height: 100%;
      @media only screen and (min-width: 1540px) {
          width: calc(100% - 500px);
      }
      .info {
          p {
              display: flex;
              align-items: center;
              justify-content: center;
              font-size: 12px;
              font-weight: 400;
              color: #4D4D4D;
              line-height: normal;
              margin: 0;
              span {
                  color: #27BBEE;
                  font-size: 20px;
                  margin-right: 5px;
              }
          }
      }
    }
  .active {
    border-left: 1px solid #27BBEE;
    border-left-width: 5px;
  }
span.status {
  padding: 0 4px;
  border-radius: 3px;
  background: #bababa;
  color: #666666;
}
span.Evaluate,span.Start {
  padding: 0 4px;
  border-radius: 3px;
  background: #1A4D9A;
  color: white !important;
}
span.Selected,span.Completed {
  padding: 0 4px;
  border-radius: 3px;
  background: #00C55D;
  color: white !important;
}
span.Rejected,span.Expired {
  padding: 0 4px;
  border-radius: 3px;
  background: #c02222;
  color: white !important;
}
span.Scheduled {
  padding: 0 4px;
  border-radius: 3px;
  background: #bababa;
  color: #666666 !important;
}
span.Progress {
  padding: 0 4px;
  border-radius: 3px;
  background: #ffbc00;
  color: white !important;
}
.shortlisted-icon {
  margin-right: 6px;
  background: green;
  border-radius: 50%;
  border: green 2px solid;
  color: white !important;
}

